WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223220
[Multi-column] Ignore line grid offset when the grid line is shorter than 0.5px
https://bugs.webkit.org/show_bug.cgi?id=223220
Summary
[Multi-column] Ignore line grid offset when the grid line is shorter than 0.5px
alan
Reported
2021-03-15 15:31:29 PDT
<
rdar://73192773
>
Attachments
Patch
(5.46 KB, patch)
2021-03-15 16:05 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.47 KB, patch)
2021-03-15 16:16 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-03-15 16:05:44 PDT
Created
attachment 423258
[details]
Patch
Simon Fraser (smfr)
Comment 2
2021-03-15 16:11:40 PDT
Comment on
attachment 423258
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=423258&action=review
> Source/WebCore/rendering/RenderLayoutState.cpp:205 > + if (!roundToInt(lineGridBox->lineBoxHeight()))
Maybe store lineBoxHeight in a local variable since this code now calls it three times.
alan
Comment 3
2021-03-15 16:16:56 PDT
Created
attachment 423259
[details]
Patch
EWS
Comment 4
2021-03-15 17:52:11 PDT
Committed
r274456
: <
https://commits.webkit.org/r274456
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 423259
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug