[Multi-column] Ignore line grid offset when the grid line is shorter than 0.5px https://bugs.webkit.org/show_bug.cgi?id=223220 <rdar://73192773>

Reviewed by Simon Fraser.

Source/WebCore:

This is a simple check on roundToInt(line box height) to make sure we don't divide by zero.

Test: fast/multicol/crash-when-line-grid-is-shorter-than-half-px.html

* rendering/RenderLayoutState.cpp:
(WebCore::RenderLayoutState::computeLineGridPaginationOrigin):
* rendering/RootInlineBox.h:
(WebCore::RootInlineBox::lineBoxHeight const):

LayoutTests:

* fast/multicol/crash-when-line-grid-is-shorter-than-half-px-expected.txt: Added.
* fast/multicol/crash-when-line-grid-is-shorter-than-half-px.html: Added.


Canonical link: https://commits.webkit.org/235312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274456 268f45cc-cd09-0410-ab3c-d52691b4dbfc